--- a/Api/WebAPI/WebAPI.csproj
+++ b/Api/WebAPI/WebAPI.csproj
@@ -23,7 +23,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\ApiCore\Services\Services.csproj" />
+    <ProjectReference Include="..\..\ApiCore\Services\Business.csproj" />
   </ItemGroup>
 
 </Project>
