--- a/Api/WebAPI/appsettings.json
+++ b/Api/WebAPI/appsettings.json
@@ -6,6 +6,11 @@
     }
   },
   "AllowedHosts": "*",
+  "JwtSettings": {
+    "Issuer": "Oguz",
+    "Audience": "Oguz",
+    "SigningKey": "~@!.Oguz*.*88!44!22.*JAVA*ESACA*:*!@~"
+  },
   "ConnectionStrings": {
     "DefaultConnection": "User ID=postgres;Password=123;Host=localhost;Port=5432;Database=BaseDB;Connection Lifetime=0;"
   }
